# atualiza-parceiro

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
docker/docker-entrypoint-initdb.d/: create-database-teste.sh
src/: config.py
src/_seedwork/: __init__.py  base_model.py  command.py  domain_channel.py  entity.py  event.py  exceptions.py  unit_of_work.py
src/entrypoints/web/: main.py
src/entrypoints/web/exception_handlers/: __init__.py  http.py  validation.py
src/entrypoints/web/middlewares/: timer.py
src/entrypoints/web/v1/: __init__.py  health.py  iam.py  users.py
src/tests/: conftest.py
src/tests/e2e/: test_http_v1.py
