[tool.poetry]
name = "atualiza-parceiro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
httpx = "^0.25.2"
uvicorn = "^0.24.0.post1"
uvloop = "^0.19.0"
anyio = "^3"
httptools = "^0.6.1" 
ipython = "^8.18.1"
dependency-injector = "^4.41.0"
sqlalchemy = "^1"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
bcrypt = "4.0.1"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
